k8s-manifests/bonita-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: bonita
spec: {}
status: {}
