k8s-manifests/deploy-bonita.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bonita
  name: bonita
  namespace: bonita
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30000
  selector:
    app: bonita
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bonita
  name: bonita
  namespace: bonita
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bonita
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bonita
    spec:
      serviceAccountName: bonita-service-account
      containers:
        - image: bonita:2023.2-u0
          name: bonita
          ports:
            - containerPort: 8080
              name: bonita-port
          resources:
            requests:
              memory: "2Gi"
              cpu: "1000m"
            limits:
              memory: "4Gi"
              cpu: "2000m"
          volumeMounts:
            - name: custom-init-scripts
              mountPath: /opt/custom-init.d
          livenessProbe:
            httpGet:
              path: / #in subscription edition we should use the /bonita/healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: custom-init-scripts
          emptyDir: {}
        - name: script-config
          configMap:
            name: bonita-custom-init
status: {}
