k8s-manifests/statefulset-bonita-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: bonita-db
  labels:
    app: bonita-db
  namespace: bonita
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: bonita-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bonita-db
  namespace: bonita
spec:
  selector:
    matchLabels:
      app: bonita-db
  serviceName: bonita-db
  replicas: 1
  template:
    metadata:
      labels:
        app: bonita-db
    spec:
      serviceAccountName: bonita-service-account
      containers:
        - name: bonita-postgres
          image: bonitasoft/bonita-postgres:15.4
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
              resources:
                requests:
                  memory: "1024Mi"
                  cpu: "1000m"
                limits:
                  memory: "1024Mi"
                  cpu: "1000m"
          livenessProbe:
            exec:
              command:
                - /usr/local/bin/healthcheck.sh
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - /usr/local/bin/healthcheck.sh
            initialDelaySeconds: 5
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
